# SearchAssetsV2

./: CMakeLists.txt  README.md  test_search.cpp
src/: SearchEngine.cpp  SearchEngine.h  UI.cpp  UI.h  main.cpp
